css/main.css
/* Table of Contents

-- GENERAL --
0. Simple Reset
1. General styling

-- Responsive --
M1. Media query syntax


Pink: #FF04D1
Dark blue: #1800CA
Blue: #3EACFF
Green: #85FF64
*/



/* 0. SIMPLE RESET */
* {
    padding: 0;
    margin: 0;
    font-size: 1em;
    line-height: 1em;
}

html {
    scroll-behavior: smooth;
  }

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * Vendor-prefixed and regular ::selection selectors cannot be combined:
 * https://stackoverflow.com/a/16982510/7133471
 *
 * Customize the background color to match your design.
 */

 ::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

/* 1. GENERAL STYLING */
body {
    color: #000;
    width: 100%;
    overflow-x: hidden;
    font-family: 'Bitter', serif;
}

section {
    margin: auto;
    width: 68%;
    max-width: 850px;
}

/* TYPOGRAPHY */
h1, h2, h3, h4 {
    font-weight: 700;
    text-align: center;
    line-height: 1.953em;
    color: #1800CA;
    margin: auto;
}

h1 {
    font-size: 3.052em;
}

h2 {
    font-size: 2.441em
}

h3 {
    font-size: 1.563em;
    margin: 3.815em auto auto auto;
}

p, ol {
    font-weight: 400;
    line-height: 1.953em;
    margin: 1.563em auto;
}

sup {
    font-size: 50%;
    color: #FF04D1;
}

ul {
    list-style: none;
    line-height: 1.953em;
}
a {
    text-decoration: none;
    -webkit-transition: all 0.2s ease-in-out;
    transition: all 0.2s ease-in-out;
    color: black;
    line-height: 1.953em;
}


p a {
    text-decoration: underline wavy #FF04D1;
}

p a:hover {
    background-color: #85FF64;
}

.message p {
    color: #FF04D1;
    font-weight: 700;
    text-align: center;
    margin: auto;
}

.message {
    margin: 4.768em auto 0em auto;
}

/* BLOCKQUOTES */
blockquote {
    margin: 1.53em auto 4.768em auto;
    text-align: center;
    width: 80%;
    border-top: 2px solid #FF04D1;
    border-bottom: 2px solid #FF04D1;
}

blockquote.in-text {
    margin: 4.768em auto;
}

blockquote p:first-child {
    font-weight: 700;
    font-size: 115%;
    margin-bottom: 1em;
}

blockquote p:nth-child(2) {
    margin-top: -0.5em;
    color: #1800CA;
}


/* HEADER */
header {
    background-image: url("../img/samurai.png");
    background-position: top right;
    background-repeat: no-repeat;
    background-size: auto;
    height: 100vh;
    width: 100%;
    position: relative;
    margin-top: -50px;
    margin-bottom: 9.52em;
}


header .wrapper {
    position: absolute;
    display: flex;
    width: 100%;
    height: 100vh;
    align-items: flex-end;
    justify-content: center;
}

header h3 {
    margin: auto;
    font-weight: 400;
    color: #FF04D1;
}

header p {
    text-align: center;
}

header .container {
    border-bottom: 2px solid #85FF64;
    border-top: 2px solid #85FF64;
    background-color: rgba(255,255,255,0.8); 
}


/* CANVAS */
#sheet {
    /*border:1px solid black;*/
    position: fixed;
    top: 0;
    left: 0;
    z-index: 998;
}


/* SELECT 
select{
    width: auto;
    font-family: 'Bitter', serif;
    line-height: 1.953em;
    border: none;
    background: url("../img/pen.png") no-repeat right #fff;
    padding-right: 50px;
    -webkit-appearance: none;
    background-position: 100% 50%;
    text-decoration: underline wavy #85FF64;
    display: inline;
    text-overflow: wrap;
}

#resizing_select {
    width: 470px;
   } 
    
   #width_tmp_select{
    display : none;
   } 

select:hover {
    color: #FF04D1;
    cursor: pointer;
}

*/

/* CURSOR */
html {
    cursor: url("../img/pen-big.png") 15 30, auto;	
}

a:hover {
    cursor: url("../img/sword.png") 15 30, auto;	
}



/* IMG */
img {
    width: 60%;
    max-width: 850px;
    display: block;
    margin: auto;
}

.section-img {
    margin: 12.052em auto 3.052em auto;
}

.small-img {
    width: 50%;
    margin: 9.052em auto -2.441em auto;
}


/* VIDEOS */
iframe {
    display: block;
    margin: 4.768em auto;
    min-width: 560px;
    min-height: 315px;
    width: 50%;
    border: 4px solid #85FF64;
    /* border-image: ("../img/pattern.png") 30; */
    padding: 1.53em;
    /* So that they are clickable above canvas: */
    position: relative;
    z-index: 999;
}

a {
    position: relative;
    z-index: 999;
}

/*
.border {
    position: relative;
}

.border:after {
    content: '';
    display: block;
    position: absolute;
    top: -5px;
    left: -5px;
    width: 100%;
    height: 100%;
    border: 2px solid #85FF64;
    border-radius: 10px;
    transform: rotate( 51deg);
    pointer-events: none;
}
*/


/* BIBLIOGRAPHY */
#bibliography ol {
    columns: 2;
    column-gap: 4.768em;
    font-size: 70%;
    list-style: none;
    counter-reset: item;
}

ol li {
    margin-bottom: 1.53em;
    counter-increment: item;
    margin-bottom: 5px;
  }

ol li:before {
    margin-right: 0.4em;
    margin-left: -1.6em;
    content: counter(item);
    border-radius: 100%;
    color: #FF04D1;
    width: 1.2em;
    text-align: center;
    display: inline-block;
  }





/* FOOTER */

footer {
    margin: 4.768em auto;
}

footer img {
      max-width: 200px;
      width: 16em;
      margin: 1.25em auto;
  }

footer p, footer a {
    text-align: center;
    margin: 1em auto;
    color: #FF04D1;
    font-size: 90%;
}

footer a {
    padding: 0.2em 2.441em 0.2em 2.441em;
    text-decoration: none;
}

footer a:hover {
    background-color: #85FF64;
}


/* MENU */
/* Menu adapted from here: https://codepen.io/slyka85/pen/LbXYKQ */

body {
    position: relative;
}

#menu-container {
    position: sticky;
    z-index: 999;
    left: 0px;
    top: 0px;
}

#menu-wrapper {
    overflow: hidden;
    max-width: 100%;
    cursor: url("../img/sword.png") 15 30, auto;	
}

#menu-wrapper #hamburger-menu {
    position: relative;
    width: 30px;
    height: 20px;
    margin: 15px;
    bottom: 0px;
    right: 0px;
}

#menu-wrapper #hamburger-menu span {
    opacity: 1;
    left: 0;
    display: block;
    width: 100%;
    height: 4px;
    color: #FF04D1;
    background-color: #FF04D1;
    position: absolute;
    transform: rotate(0deg);
    transition: .4s ease-in-out;
}

#menu-wrapper #hamburger-menu span:nth-child(1) {
    top: 0;
}
#menu-wrapper #hamburger-menu span:nth-child(2) {
    top: 9px;
}
#menu-wrapper #hamburger-menu span:nth-child(3) {
    top: 18px;
}
#menu-wrapper #hamburger-menu.open span:nth-child(1) {
    transform: translateY(9px) rotate(135deg);
}
#menu-wrapper #hamburger-menu.open span:nth-child(2) {
    opacity: 0;
    transform: translateX(-60px);
}
#menu-wrapper #hamburger-menu.open span:nth-child(3) {
    transform: translateY(-9px) rotate(-135deg);
}



#menu-container .menu-list {
    padding-left: 0;
    padding-right: 2.441em;
    display: block;
    position: absolute;
    width: auto;
    max-width: 450px;
    background: white;
    box-shadow: rgba(100,100,100,0.2) 6px 2px 10px;
    z-index: 999;
    overflow-y: auto;
    overflow-x: hidden;
    left: -100%;
    border-top: 4px solid #FF04D1;
    border-bottom: 4px solid #FF04D1;
}

ol.menu-list {
    list-style: none;
    counter-reset: item;
    margin-top: 0em;
}

.menu-list li {
    padding: 0.8em 0.512em 0.8em 3.052em;
    /* margin: 1.563em auto 1.563em 3.052em; */
}

.menu-list li:first-of-type {
    margin-top: 5px;
}

ol li:hover {
    background-color: #85FF64;
}




/* RESPONSIVE */

@media (max-width: 55em) {

    section {
        width: 100%;
    }

    section p, section ol {
        width: 80%;
    }
    
}


@media (max-width: 40em) {

    header {
        background-position: 40% 0%;
    }

    #menu-container {
        background-color: #fff;
        box-shadow: rgba(100,100,100,0.2) 6px 2px 10px;
    }

    section p {
        width: 85%;
        font-size: 105%;
    }

    h1, h2, h3, h4 {
        width: 85%;
    }

    h1 {
        font-size: 2.441em;
    }

    h2 {
        font-size: 1.953em;
    }

    .section-img {
        width: 100%;
        height: auto;
    }

    .small-img {
        width: 60%;
        height: auto;
    }

    blockquote {
        width: 100%;
    }

    #bibliography ol {
        columns: 1;
    }

    iframe {
        width: 100%;
        height: 315px;
        min-height: unset;
        min-width: unset;
        padding: 0em;
        margin: auto;
        padding: 1.53em 0em;
        border: none;
        border-top: 4px solid #85FF64;
        border-bottom: 4px solid #85FF64;
    }

    #experience {
        width: 120%;
    }

    /* TOUCH DEVICES */
    @media only screen and (hover: none) {

        #sheet, .message {
            display: none;
        }

      }
}

